--- a/src/components/BurgerMenu/BurgerMenu.scss
+++ b/src/components/BurgerMenu/BurgerMenu.scss
@@ -68,9 +68,9 @@
   }
 
   &__menu-list {
-    margin: 0 0 24px;
+    margin: 0 0 0 20px;
     font-size: 24px;
-    margin-left: 20px;
+    // margin-left: 20px;
     gap: 14px;
     font-weight: 500;
 
