--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -12,16 +12,23 @@
 
     width: 100%;
     @include onDesktop {
-      width: 70%;
+      width: 80%;
     }
   }
 
   &__project-description {
     margin: 0 auto 36px;
-    font-size: 24px;
-    line-height: 1.5;
+    width: 90%;
+
+    font-size: 16px;
+    line-height: 1.25;
     text-align: justify;
-    width: 70%;
+
+    @include onDesktop {
+      font-size: 24px;
+      line-height: 1.5;
+    }
+
   }
 
   &__uc-button-more {
