--- a/src/pages/AboutUsPage/AboutUsPage.scss
+++ b/src/pages/AboutUsPage/AboutUsPage.scss
@@ -12,9 +12,13 @@
     background-size: cover;
     background-position: right;
 
-    height: 600px;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     @include onDesktop {
+      height: 600px;
     }
   }
 
@@ -27,10 +31,6 @@
 
     max-width: 600px;
     text-align: center;
-
-    left: 50%;
-    bottom: 10%;
-    transform: translate(-50%, -50%);
 
     padding: 20px 40px;
     border-radius: 24px;
