--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -10,3 +10,6 @@ $colorTelegramPrimaryBlue: #62909e;
 $colorTelegramBackgroundBlue: #e6f3f9;
 $colorTelegramPrimaryGreen: #6f925f;
 $colorTelegramBackgroundGreen: #f0fddf;
+$colorYellow: #f6ba02;
+$colorBlue: #13adaa;
+$colorBlueSchedule: #4bbbf5;
