--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @import 'utils/mixins';
 @import 'utils/normalize';
 @import 'utils/noselect';
+@import 'utils/fonts';
 @import 'blocks/animation.scss';
 @import 'blocks/page';
 @import 'blocks/top-actions';
