--- a/src/pages/YellowBlue/YellowBlue.scss
+++ b/src/pages/YellowBlue/YellowBlue.scss
@@ -16,7 +16,7 @@
     display: flex;
     justify-content: center;
     padding: 50px 0 0;
-    height: 50vh;
+    height: 460px;
     max-width: 1280px;
     background: url('/images/yellow-blue/yellow-blue--stripes.png');
     background-repeat: no-repeat;
