--- a/src/pages/YellowBlue/YellowBlue.scss
+++ b/src/pages/YellowBlue/YellowBlue.scss
@@ -155,6 +155,7 @@
     text-align: justify;
     font-size: 16px;
     line-height: 1.25;
+    color: $colorDarkGreen;
 
     &--center {
       text-align: center;
