--- a/src/components/BurgerMenu/BurgerMenu.scss
+++ b/src/components/BurgerMenu/BurgerMenu.scss
@@ -68,7 +68,7 @@
   }
 
   &__menu-list {
-    margin: 0 0 0 20px;
+    margin: 0 0 40px 20px;
     font-size: 24px;
     // margin-left: 20px;
     gap: 14px;
@@ -126,6 +126,15 @@
 
     &--open {
       max-height: 300px;
+    }
+  }
+
+  &__yellow-blue {
+    &--yellow {
+      color: $colorYellow;
+    }
+    &--blue {
+      color: $colorBlue;
     }
   }
 
