--- a/src/components/DonateForm/DonateForm.scss
+++ b/src/components/DonateForm/DonateForm.scss
@@ -3,16 +3,20 @@
 
 .donate-form {
   margin: 0 auto 40px;
-  padding: 40px;
+  padding: 0 0 32px;
+  border-radius: 16px;
+  border: 1px solid #c9cde0;
+  background-color: #fff;
+  max-width: 459px;
+  overflow: hidden;
+
   gap: 30px;
-  width: 400px;
 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
 
-  border: 1px solid #eee;
   border-radius: 24px;
   transition: all 0.3s ease-in-out;
 
@@ -61,6 +65,48 @@
     &:hover {
       background-color: $colorDarkGreen;
       color: $colorBeige;
+    }
+  }
+
+  &__mode-selector {
+    position: relative;
+    width: 100%;
+    height: 40px;
+
+    display: flex;
+    justify-content: space-evenly;
+
+    border-top-left-radius: 24px;
+    border-top-right-radius: 24px;
+  }
+
+  &__mode-button {
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+
+    background-color: #eee;
+
+    color: rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+
+    transition: all 0.3s ease;
+
+    &:hover {
+      color: $colorDarkGreen;
+    }
+
+    &--active {
+      font-weight: 600;
+      background-color: #fff;
+      height: calc(100% + 1px);
+      color: $colorDarkGreen;
     }
   }
 }
