--- a/src/components/PaymentBlock/PaymentBlock.scss
+++ b/src/components/PaymentBlock/PaymentBlock.scss
@@ -111,8 +111,9 @@
   }
 
   &__destination {
-    padding: 10px 28px;
     cursor: pointer;
+
+    padding: 10px 28px;
     border: 1px solid #aab2ca;
     border-radius: 100px;
     color: $colorDarkGreen;
@@ -166,6 +167,10 @@
     &--copied {
       color: $colorDarkGreen;
     }
+  }
+
+  &__copy-icon {
+    cursor: pointer;
   }
 
   &__banks {
