--- a/src/components/ConceptItem/ConceptItem.scss
+++ b/src/components/ConceptItem/ConceptItem.scss
@@ -30,7 +30,7 @@
       width: calc(50% - 12px);
 
       &:nth-child(2n) {
-        animation-delay: 100ms;
+        animation-delay: 300ms;
       }
     }
 
@@ -38,16 +38,19 @@
       width: calc(33.33333% - 24px);
 
       &:nth-child(2) {
-        animation-delay: 100ms;
+        animation-delay: 300ms;
       }
       &:nth-child(3) {
-        animation-delay: 200ms;
+        animation-delay: 600ms;
+      }
+      &:nth-child(4) {
+        animation-delay: 900ms;
       }
       &:nth-child(5) {
-        animation-delay: 100ms;
+        animation-delay: 1200ms;
       }
       &:nth-child(6) {
-        animation-delay: 200ms;
+        animation-delay: 1500ms;
       }
     }
   }
