--- a/src/pages/CrisisCenterPage/CrisisCenterPage.scss
+++ b/src/pages/CrisisCenterPage/CrisisCenterPage.scss
@@ -34,12 +34,6 @@
     max-width: 600px;
     text-align: center;
 
-    /*     left: 50%;
-    bottom: 10%; */
-
-    /*     transform: translate(-50%, 20%);
-    opacity: 0; */
-
     padding: 20px 40px;
     border-radius: 24px;
     color: $colorDarkGreen;
@@ -50,13 +44,13 @@
   }
 
   &__description-content {
-    padding: 50px 0 50px;
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 50px;
   }
 
   &__text-content {
+    text-indent: 50px;
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -77,12 +71,10 @@
     border-radius: 8px;
     overflow: hidden;
 
-    width: 150px * 3 + 10px * 2;
-    height: 150px * 3 + 10px * 2;
     display: grid;
     grid-template-columns: repeat(3, 150px);
     grid-template-rows: repeat(3, 150px);
-    gap: 10px;
+    gap: 20px;
     align-items: center;
     flex-shrink: 0;
   }
@@ -95,9 +87,24 @@
   }
 
   &__image-text {
+    color: $colorDarkGreen;
+    background-color: $colorBeige;
 
-    &--wide {
-      grid-column: span 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    border-radius: 50%;
+    font-weight: 700;
+
+    font-size: 20px;
+
+    transition: all 0.3s ease;
+
+    &:hover {
+      background-color: $colorDarkGreen;
+
+      color: $colorBeige;
     }
   }
 
