--- a/src/pages/CrisisCenterPage/CrisisCenterPage.scss
+++ b/src/pages/CrisisCenterPage/CrisisCenterPage.scss
@@ -29,6 +29,7 @@
     background: rgba(255, 255, 255, 0.5);
     font-weight: 600;
     letter-spacing: 1px;
+    text-transform: uppercase;
 
     width: 80%;
     max-width: 600px;
@@ -44,13 +45,26 @@
   }
 
   &__description-content {
-    display: flex;
+    /* display: flex;
     align-items: center;
-    gap: 50px;
+    gap: 50px; */
+
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 24px;
+
+    @include onDesktop {
+      grid-template-columns: repeat(12, 1fr);
+      gap: 50px;
+    }
+
+    align-items: center;
   }
 
   &__text-content {
+    grid-column: 1 / -1;
     text-indent: 50px;
+
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -61,6 +75,7 @@
     @include onDesktop {
       font-size: 24px;
       gap: 24px;
+      grid-column: 1 / 8;
     }
 
     @include onDesktop--xxl {
@@ -72,17 +87,19 @@
     overflow: hidden;
 
     display: grid;
-    grid-template-columns: repeat(3, 150px);
-    grid-template-rows: repeat(3, 150px);
+
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+
+    grid-column: 1 / -1;
+
+    @include onDesktop {
+      grid-column: 8 / 13;
+    }
     gap: 20px;
-    align-items: center;
-    flex-shrink: 0;
   }
 
   &__image {
-    height: 150px;
-    width: 150px;
-
     border-radius: 50%;
   }
 
