--- a/src/pages/CrisisCenterPage/CrisisCenterPage.scss
+++ b/src/pages/CrisisCenterPage/CrisisCenterPage.scss
@@ -196,23 +196,35 @@
     @include onTablet--m {
       flex-direction: row;
     }
+
+    @include onDesktop {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(3, minmax(fit-content, 1fr));
+    }
   }
 
   &__reviews-item {
+    padding: 20px 30px 40px;
     position: relative;
+
     font-size: 14px;
     line-height: 1.5;
     text-align: justify;
 
     @include onDesktop {
-      width: 48%;
+      width: 100%;
     }
 
-    padding: 20px 30px 40px;
     border-radius: 12px;
 
     &--blue {
       background-color: $colorTelegramBackgroundBlue;
+    }
+
+    &--vertical {
+      grid-column: 2 / 3;
+      grid-row: 1 / 3;
     }
 
     &--green {
