--- a/src/components/Donate/Donate.scss
+++ b/src/components/Donate/Donate.scss
@@ -33,6 +33,10 @@
 
     box-shadow: 0px 0px 45px $colorGoldLight;
 
+    &.animation__fade-up--fire {
+      animation-delay: 1800ms;
+    }
+
     @include onTablet--s {
       font-size: 24px;
     }
