--- a/src/components/Donate/Donate.scss
+++ b/src/components/Donate/Donate.scss
@@ -34,7 +34,9 @@
     box-shadow: 0px 0px 45px $colorGoldLight;
 
     &.animation__fade-up--fire {
-      animation-delay: 1800ms;
+      @include onTablet--m {
+        animation-delay: 1800ms;
+      }
     }
 
     @include onTablet--s {
