--- a/src/pages/CrisisCenterPage/CrisisCenterPage.scss
+++ b/src/pages/CrisisCenterPage/CrisisCenterPage.scss
@@ -434,11 +434,13 @@
   &__item {
     width: 300px;
     list-style: none;
+    margin: 0 auto;
 
     background-color: $colorDarkGreen;
     border-radius: 24px;
 
     @include onTablet--m {
+      margin: 0;
       width: calc((100% - 20px * 2) / 3);
     }
 
